--- a/.golangci.yml
+++ b/.golangci.yml
@@ -25,8 +25,8 @@ linters:
     - goconst
     - gocognit
     - asciicheck
-    - gofmt
-    - goimports
+    # - gofmt
+    # - goimports
     - depguard # This probably needs custom configuration
     - misspell
     - unparam
